--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Blend & Run: Enable copy and paste on blocked websites",
+    "name": "Blend & Run: Enable copy and paste",
     "version": "1.0.0.1",
     "description": "Extension to copy & paste text on websites which block it.",
     "manifest_version": 3,
